--- a/public/index.html
+++ b/public/index.html
@@ -20,5 +20,19 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script>
+      function onSuccess() {
+        $('.Join-success').show();
+        $('.Join-form').hide();
+      }
+
+      function ml_webform_success_1872060() {
+        onSuccess()
+      }
+
+      function ml_webform_success_1561498() {
+        onSuccess()
+      }
+    </script>
   </body>
 </html>
