Design contact form

--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,11 @@
     <div id="root"></div>
     <script>
       function onSuccess() {
-        $('.Join-success').show();
-        $('.Join-form').hide();
+        $('.Contact-success').show();
+        $('.Contact-form').hide();
       }
 
-      function ml_webform_success_1872060() {
+      function ml_webform_success_2166978() {
         onSuccess()
       }
 
